<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.AppFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextAppearance="@style/Theme.CollapsedBarTextStyle"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/Theme.ExpandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/explore">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_app_bar"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:text="@string/greet_message"
                    android:textSize="@dimen/text_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/collapsing_toolbar_txt"
                    android:textSize="@dimen/text_28"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="26dp"
                    android:text="@string/collapsing_toolbar_sub_txt"
                    android:textSize="@dimen/text_18" />

            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/background"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/app_fragment_ui_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_fragment_weather_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_16"
                android:layout_marginTop="@dimen/gap_16"
                android:layout_marginEnd="@dimen/gap_16"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/app_fragment_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="invisible"
                        app:indicatorColor="?attr/colorPrimary"
                        app:showAnimationBehavior="outward"
                        app:trackCornerRadius="5dp" />

                    <TextView
                        android:id="@+id/app_fragment_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/gap_16"
                        android:layout_marginTop="@dimen/gap_16"
                        android:layout_marginEnd="@dimen/gap_16"
                        android:text="@string/default_text"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_28" />

                    <TextView
                        android:id="@+id/app_fragment_city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/gap_16"
                        android:layout_marginTop="@dimen/gap_16"
                        android:layout_marginEnd="@dimen/gap_16"
                        android:text="@string/default_text"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_18" />

                    <EditText
                        android:id="@+id/app_fragment_et_area_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/area_name_hint"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_18" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/app_fragment_bt_fetch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fetch"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_fragment_schedule_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_16"
                android:layout_marginTop="@dimen/gap_16"
                android:layout_marginEnd="@dimen/gap_16"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/app_fragment_schedule_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/gap_16"
                        android:text="@string/schedule_text"
                        android:textSize="@dimen/text_18" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/app_fragment_bt_schedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/holo_green_light"
                        android:text="@string/schedule"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_fragment_foreground_service_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_16"
                android:layout_marginTop="@dimen/gap_16"
                android:layout_marginEnd="@dimen/gap_16"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/app_fragment_foreground_service_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/gap_16"
                        android:text="@string/foreground_service_track_txt"
                        android:textSize="@dimen/text_18" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/app_fragment_bt_foreground_service"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:text="@string/foreground_service_track"
                        android:textAllCaps="false"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
